--- a/Zazzles/packages.config
+++ b/Zazzles/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
+  <package id="EngineIoClientDotNet" version="0.9.21" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
-  <package id="WebSocket4Net" version="0.12" targetFramework="net451" />
+  <package id="SocketIoClientDotNet" version="0.9.12" targetFramework="net451" />
+  <package id="WebSocket4Net" version="0.13.1" targetFramework="net451" />
 </packages>
