--- a/Zazzles/packages.config
+++ b/Zazzles/packages.config
@@ -3,6 +3,7 @@
   <package id="BouncyCastle" version="1.7.0" targetFramework="net451" />
   <package id="EngineIoClientDotNet" version="0.9.21" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="8.0.1" targetFramework="net451" />
+  <package id="Newtonsoft.Json.Schema" version="2.0.1" targetFramework="net451" />
   <package id="SocketIoClientDotNet" version="0.9.12" targetFramework="net451" />
   <package id="WebSocket4Net" version="0.14.1" targetFramework="net451" />
 </packages>
