--- a/Zazzles/Zazzles.csproj
+++ b/Zazzles/Zazzles.csproj
@@ -163,6 +163,16 @@
     <Compile Include="Bus\BusClient.cs" />
     <Compile Include="Bus\BusServer.cs" />
     <Compile Include="Data\Hash.cs" />
+    <Compile Include="Debugger\Commands\CBus\BusCommand.cs" />
+    <Compile Include="Debugger\Commands\ICommand.cs" />
+    <Compile Include="Debugger\Commands\Middleware\AuthenticationCommand.cs" />
+    <Compile Include="Debugger\Commands\Middleware\CommunicationCommand.cs" />
+    <Compile Include="Debugger\Commands\Middleware\ConfigurationCommand.cs" />
+    <Compile Include="Debugger\Commands\Middleware\MiddlewareCommand.cs" />
+    <Compile Include="Debugger\Commands\Process\ProcessCommand.cs" />
+    <Compile Include="Debugger\Commands\Settings\SettingsCommand.cs" />
+    <Compile Include="Debugger\Commands\User\UserCommand.cs" />
+    <Compile Include="Debugger\Debugger.cs" />
     <Compile Include="Eager.cs" />
     <Compile Include="Middleware\Bindings\IServerBinding.cs" />
     <Compile Include="Middleware\Bindings\Polling.cs" />
