Restructure inheritance of modules
Allow for simpler json message to class conversions

--- a/Zazzles/Zazzles.csproj
+++ b/Zazzles/Zazzles.csproj
@@ -186,7 +186,9 @@
     <Compile Include="Data\Transform.cs" />
     <Compile Include="Data\RSA.cs" />
     <Compile Include="Log\Log.cs" />
+    <Compile Include="Modules\IEventProcessor.cs" />
     <Compile Include="Modules\PolicyModule.cs" />
+    <Compile Include="Modules\Updater\UpdaterMessage.cs" />
     <Compile Include="Notification\Notification.cs" />
     <Compile Include="Bus\Bus.cs" />
     <Compile Include="Power\IPower.cs" />
