--- a/Zazzles.Tests/Zazzles.Tests.csproj
+++ b/Zazzles.Tests/Zazzles.Tests.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Bus\Bus.cs" />
     <Compile Include="Data\Hash.cs" />
     <Compile Include="Middleware\Configuration.cs" />
+    <Compile Include="Process\ProcessHandler.cs" />
     <Compile Include="Settings\Settings.cs" />
     <Compile Include="User\User.cs" />
     <Compile Include="Data\Transform.cs" />
@@ -113,6 +114,11 @@
       <Project>{4cacd1de-ef40-4db9-8ee0-9dcb90c359e7}</Project>
       <Name>Zazzles</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="tests-include\ProcessTester.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
