--- a/Zazzles/packages.config
+++ b/Zazzles/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EngineIoClientDotNet" version="0.9.21" targetFramework="net40" />
-  <package id="Mono.Security" version="3.2.3.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net40" />
+  <package id="NGettext" version="0.6.2" targetFramework="net40" />
   <package id="WebSocket4Net" version="0.14.1" targetFramework="net40" />
 </packages>
