--- a/Zazzles.Core/Zazzles.Core.csproj
+++ b/Zazzles.Core/Zazzles.Core.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Ninja.WebSockets" Version="0.8.0" />
+    <PackageReference Include="Polly" Version="6.1.0" />
     <PackageReference Include="PubSub" Version="2.0.0" />
     <PackageReference Include="System.Diagnostics.Process" Version="4.3.0" />
     <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0" />
